# final-degree-project

./: .gitignore  .gitmodules  README.md  channel_switcher.py  data_manager.py  main.py  netlify.toml  requirements.txt  upload.json
backend/: clustering.py  docker-compose.yml  go.mod  go.sum  nginx.conf
c-implementation/: .gitignore  CMakeLists.txt  Makefile  helpers.cpp  helpers.h  main.cpp  main.h  sniffer.cpp
capture/: .gitignore  CMakeLists.txt
capture-python/: channel_switcher.py  data_manager.py  requirements.txt
capture/src/: helpers.cpp  helpers.h  main.cpp
data-ingest-api/: Dockerfile  docker-compose.yml  go.mod  go.sum  nginx.conf
database/: 01.sql  02.sql  scripts.sql
experiments-data/: first.csv  fourth.csv  people_count_2022-06-07.csv  second.csv  third.csv
frontend/: package-lock.json  package.json
scripts/: db_mac_to_vendor.py  fake_mac_enumerator.py  first.csv  fix_capture_bug_db.py  fourth.csv  graph.py  graph_true_macs.py  graph_unique_macs.py  h1_analysis.py  h1_db_mac_to_vendor.py  h1_fake_mac_enumerator.py  h1_ocupation_visualizer.py  h2_historic_visualizer.py  h3_historic_visualizer.py  h3_historic_vs_real.py  h3_people_counter.py  historic.py  historic_vs_real.py  historic_vs_real_browser.py  hypothesis2_visualizer.py  ocupacion.py  ocupation.py  people_count.csv  people_count.txt  people_count_2022-06-07.txt  people_count_2022-06-08.csv  people_count_2022-06-09.csv  scatter.py  scatter_real_vs_fake.py  second.csv  third.csv
v1-api/: Dockerfile  docker-compose.yml  go.sum  nginx.conf
v2-api/: docker-compose.yml  go.mod  go.sum  (+1 more)
(+39 files in other folders)
